--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,24 +10,21 @@
     box-sizing: border-box;
 }
 
-section h2{
-flex: 1 25%;
-border-right: 5px solid var(--secondary-color);
-margin-right: 50px;
-display: flex;
-justify-content: space-between;
-flex-wrap: wrap;
-}
-
-.container{
-    display: flex;
-    justify-content: space-between;
-}
 
 body {
     background-color: var(--primary);
     font-family: "century gothic",Verdana,sans-serif;
 }
+
+p {
+    width: 70%;
+    margin-bottom: 20px;
+    color: var(--secondary);
+    line-height: 1.7;
+    font-size: 18px;
+    padding-top: 20px;
+}
+
 
 header {
     background-color: var(--tertiary);
@@ -85,11 +82,6 @@ nav ul li a:hover {
     color: var(--primary);
 }
 
-h2 {
-    color: var(--primary);
-    font-family: "century gothic",Verdana,sans-serif;
-}
-
 .hero {
     display: flex;
     justify-content: center;
@@ -105,46 +97,27 @@ h2 {
     background-position: 80%;
 }
 
-.space {
-    margin: 100px auto;
-    padding-right: 100px;
-    width: 100%;
+.container{
     display: flex;
-    flex-wrap: wrap;
-    flex: 1 100%;
-    align-items: flex-start;
-    justify-content: center;
+    justify-content: space-between;
+   
 }
-
-/* about me section */
 
 h2 {
     color: var(--secondary);
-    font-size: 50px;
     font-family: "century gothic",Verdana,sans-serif;
+    font-size: 50px;
     font-weight: lighter;
     text-align: right;
     padding-top: 30px;
     padding-right: 60px;
     flex: 1 30%;
+    height: auto;
+    border-right: 5px solid var(--secondary);
 }
 
-.img-container {
-    flex: 1 70%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    padding-left: 60px;
-    border-left: 5px solid var(--secondary);
-}
-
- p {
-    width: 70%;
-    margin-bottom: 20px;
-    color: var(--secondary);
-    line-height: 1.7;
-    font-size: 18px;
-    padding-top: 20px;
+.aboutme-content {
+    flex: 2 70%;
 }
 
 section img {
@@ -165,9 +138,68 @@ main .first {
 
 }
 
+main .text {
+    background-color: var(--tertiary);
+    color: var(--secondary);
+
+}
+
+main .work {
+    display: flex;
+    flex-wrap: wrap;
+    height: auto;
+    width: auto;
+}
+
+article img {
+    display: flex;
+    flex-wrap: wrap;
+    max-height: 30px;
+}
+
+.contact-me {
+    margin: 5px 10px 5px 0;
+}
+
+.contactme {
+    flex-wrap: wrap;
+    display: flex;
+}
+footer p {
+    padding: 40px 35px;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+}
+/* 
+
+
+
+
+.aboutme img {
+    flex: 1 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    padding-left: 60px;
+    
+}
+
+main .first {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-left: 70px;
+
+}
+
 main .work {
     display: flex;
     flex-wrap: wrap;
     padding-left: 70px;
     justify-content: flex-end;
+    
 }
+    
+
+    */
