--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@
 
 
 body {
+    color: var(--secondary);
     background-color: var(--primary);
     font-family: "century gothic",Verdana,sans-serif;
 }
@@ -22,7 +23,6 @@ p {
     color: var(--secondary);
     line-height: 1.7;
     font-size: 18px;
-    padding-top: 20px;
 }
 
 
@@ -59,7 +59,7 @@ header h1 a:hover {
 }
 
 nav {
-    margin: 7px 0;
+    margin: 10px 0;
 }
 
 nav ul {
@@ -92,14 +92,14 @@ nav ul li a:hover {
     background-position: center;
     background-attachment: fixed;
     background-position: 100%;
-    height: 600px;
+    height: 450px;
     background-attachment: fixed;
     background-position: 80%;
 }
 
 .container{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
    
 }
 
@@ -116,7 +116,7 @@ h2 {
     border-right: 5px solid var(--secondary);
 }
 
-.aboutme-content {
+.about-me, .my-work, .contact-me {
     flex: 2 70%;
 }
 
@@ -130,28 +130,23 @@ section img {
     margin-left: 20px;
 }
 
-main .first {
+.title {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
     padding-left: 70px;
 
 }
 
-main .text {
-    background-color: var(--tertiary);
-    color: var(--secondary);
-
-}
-
-main .work {
+.project-label {
     display: flex;
     flex-wrap: wrap;
-    height: auto;
-    width: auto;
+    min-height: 40px;
+    min-width: 40px;
+    align-items: flex-start;
 }
 
-article img {
+.contact-list img {
     display: flex;
     flex-wrap: wrap;
     max-height: 30px;
@@ -161,9 +156,9 @@ article img {
     margin: 5px 10px 5px 0;
 }
 
-.contactme {
-    flex-wrap: wrap;
+.contact-list {
     display: flex;
+    justify-content: space-between;
 }
 footer p {
     padding: 40px 35px;
@@ -171,35 +166,250 @@ footer p {
     text-align: center;
     font-size: 20px;
 }
-/* 
 
-
-
-
-.aboutme img {
-    flex: 1 70%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    padding-left: 60px;
-    
+.title {
+    border-right: 5px solid var(--pop);
+    min-height: 100%;
+    text-align: right;
+    padding-right: 40px;
+    min-width: 20%;
+    max-width: 20%;
 }
 
-main .first {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    padding-left: 70px;
-
+.title h2 {
+    font-size: 48px;
 }
 
-main .work {
+/* utility class styling end */
+
+/* about me section styling start */
+.about-me {
     display: flex;
-    flex-wrap: wrap;
-    padding-left: 70px;
+    justify-content: space-between;
+    align-items: stretch;
+    padding-top: 30px;
+}
+
+.about-me p {
+    font-size: 20px;
+    padding: 0 30px;
+    line-height: 1.6;
+    width: 90%;
+}
+/* about me section styling end */
+
+/* my work section styling start */
+.my-work {
+    padding: 30px 0;
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--primary);
+}
+
+.my-work h2 {
+    color: var(--secondary);
+}
+
+.projects-grid-wrapper {
+    width: 80%;
+    height: 800px;
+    display: flex;
+    justify-content: center;
+}
+
+.projects-grid {
+    width: 70%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 10px;
+}
+
+.project {
+    border: solid;
+    color: black;
+    display: flex;
     justify-content: flex-end;
+    align-items: flex-end;
+    text-decoration: none;
+    background-size: cover;
+    background-position: center;
+    opacity: 0.5;
+}
+
+.project:hover {
+    opacity: 1.0;
+}
+
+.runbuddy {
+    grid-column: 1/3;
+    grid-row: span 2;
+    background-image: url("../images/runbuddy.PNG");
+}
+
+.horiseon {
+    background-image: url("../images/horiseon.png");
+    background-position: 50% 15%;
+}
+
+.ddten {
+    background-image: url("../images/ddten.png");
+    background-position: 60% 50%;
+}
+
+.javascript {
+    background-image: url("../images/javascript.png");
+}
+
+.python {
+    background-image: url("../images/python.png");
+}
+
+.project-label {
+    /*background-color: var(--secondary);*/
+    background-color: lightgray;;
+    color: var(--primary);
+    padding: 10px;
+}
+/* my work section styling end */
+
+/* contact me section styling start */
+footer {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 30px;
+    margin-bottom: 30px;
+}
+
+.content-wrapper {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-list {
+    width: 60%;
+    display: flex;
+    justify-content: space-around;
+}
+
+footer ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: center;
+    font-size: 30px;
+    font-weight: bolder;
+}
+
+footer ul li {
+    /*padding-bottom: 15px;*/
+    font-weight: bold;
+
+}
+
+footer ul li a {
+    text-decoration: none;
+    color: var(--primary);
+    padding: 8px;
+    font-weight: bold;
+}
+
+footer ul li a:hover {
+    background: var(--pop);
+    color: var(--secondary);
+    border-radius: 15px;
+}
+/* contact me section styling end */
+
+/* MEDIA QUERY FOR TABLET SCREENS AND SMALLER */
+@media screen and (max-width: 768px) {
+    .hero .quote {
+        font-size: 28px;
+        padding-right: 20px;
+    }
+    
+    .hero .quote #quote-text {
+        font-size: 35px;
+    }
+
+    .title h2 {
+        font-size: 35px;
+    }
+
+    .about-me p {
+        font-size: 16px;
+        line-height: 1.6;
+    }
+}
+
+/* MEDIA QUERY FOR MOBILE PHONE SCREENS AND SMALLER */
+@media screen and (max-width: 575px) {
+    header {
+        justify-content: center;
+        padding: 20px;
+    }
+
+    header nav ul {
+        min-height: 80px;
+    }
+
+    .hero {
+        flex-direction: column;
+    }
+
+    .about-me {
+        flex-direction: column;
+    }
+
+    .title {
+        border-bottom: 5px solid var(--pop);
+        border-right: none;
+        text-align: center;
+        min-width: 100%;
+        max-width: 100%;
+        padding: 0;
+    }
+
+    .about-me p {
+        font-size: 16px;
+        line-height: 1.6;
+        width: 100%;
+        padding: 15px;
+    }
+
+    .my-work {
+        flex-direction: column;
+        padding: 30px 0;
+    }
+
+    .projects-grid-wrapper {
+        width: 100%;
+        padding: 10px;
+    }
+    
+    .projects-grid {
+        width: 80%;
+    }
+
+    footer {
+        flex-direction: column;
+    }
+
+    footer ul {
+        flex-direction: column;
+    }
+
+    .content-wrapper {
+        width: 100%;
+    }
+
+    footer ul li {
+        padding: 10px;
+        text-align: center;
+    }
     
 }
-    
-
-    */
