--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,21 +10,10 @@
     box-sizing: border-box;
 }
 
-
 body {
-    color: var(--secondary);
     background-color: var(--primary);
     font-family: "century gothic",Verdana,sans-serif;
 }
-
-p {
-    width: 70%;
-    margin-bottom: 20px;
-    color: var(--secondary);
-    line-height: 1.7;
-    font-size: 18px;
-}
-
 
 header {
     background-color: var(--tertiary);
@@ -32,7 +21,6 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    position: sticky;
     top: 0;
     background-image: url("../images/hero.jpg");
     background-size: cover;
@@ -59,7 +47,7 @@ header h1 a:hover {
 }
 
 nav {
-    margin: 10px 0;
+    margin: 7px 0;
 }
 
 nav ul {
@@ -82,6 +70,11 @@ nav ul li a:hover {
     color: var(--primary);
 }
 
+h2 {
+    color: var(--primary);
+    font-family: "century gothic",Verdana,sans-serif;
+}
+
 .hero {
     display: flex;
     justify-content: center;
@@ -92,324 +85,412 @@ nav ul li a:hover {
     background-position: center;
     background-attachment: fixed;
     background-position: 100%;
-    height: 450px;
+    height: 600px;
     background-attachment: fixed;
     background-position: 80%;
 }
 
-.container{
+.container {
+    margin: 100px auto;
+    padding-right: 100px;
+    width: 100%;
     display: flex;
-    justify-content: space-evenly;
-   
+    flex-wrap: wrap;
+    flex: 1 100%;
+    align-items: center;
+    justify-content: center;
 }
 
-h2 {
+/* about me section */
+
+section h2 {
     color: var(--secondary);
-    font-family: "century gothic",Verdana,sans-serif;
     font-size: 50px;
+    font-family: "century gothic",Verdana,sans-serif;
     font-weight: lighter;
     text-align: right;
     padding-top: 30px;
-    padding-right: 60px;
+    padding-right: 30px;
     flex: 1 30%;
-    height: auto;
-    border-right: 5px solid var(--secondary);
 }
 
-.about-me, .my-work, .contact-me {
+.aboutme {
     flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-left: 30px;
+    border-left: 5px solid var(--secondary);
 }
 
-section img {
+.aboutme p {
+    width: 70%;
+    margin-bottom: 20px;
+    color: var(--secondary);
+    line-height: 1.7;
+    font-size: 18px;
+    padding-top: 20px;
+}
+
+.about-img {
+    margin-left: 20px;
+}
+
+.about-img img {
     max-width: 200px;
     height: auto;
     float: left;
     margin: 20px 20px 0 0;
     flex: 2 0 0;
-    border-radius: 100px;
-    margin-left: 20px;
 }
 
-.title {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    padding-left: 70px;
+/* work section */
 
-}
-
-.project-label {
-    display: flex;
-    flex-wrap: wrap;
-    min-height: 40px;
-    min-width: 40px;
-    align-items: flex-start;
-}
-
-.contact-list img {
-    display: flex;
-    flex-wrap: wrap;
-    max-height: 30px;
-}
-
-.contact-me {
-    margin: 5px 10px 5px 0;
-}
-
-.contact-list {
-    display: flex;
-    justify-content: space-between;
-}
-footer p {
-    padding: 40px 35px;
-    width: 100%;
-    text-align: center;
-    font-size: 20px;
-}
-
-.title {
-    border-right: 5px solid var(--pop);
-    min-height: 100%;
-    text-align: right;
-    padding-right: 40px;
-    min-width: 20%;
-    max-width: 20%;
-}
-
-.title h2 {
-    font-size: 48px;
-}
-
-/* utility class styling end */
-
-/* about me section styling start */
-.about-me {
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    padding-top: 30px;
-}
-
-.about-me p {
-    font-size: 20px;
-    padding: 0 30px;
-    line-height: 1.6;
-    width: 90%;
-}
-/* about me section styling end */
-
-/* my work section styling start */
-.my-work {
-    padding: 30px 0;
-    display: flex;
-    justify-content: space-between;
-    background-color: var(--primary);
-}
-
-.my-work h2 {
+main h2 {
     color: var(--secondary);
+    font-size: 50px;
+    font-family: "century gothic",Verdana,sans-serif;
+    font-weight: lighter;
+    text-align: right;
+    padding-top: 30px;
+    flex: 1 30%;
+    padding-right: 30px;
 }
 
-.projects-grid-wrapper {
-    width: 80%;
-    height: 800px;
+.img-container {
     display: flex;
-    justify-content: center;
+    flex: 1 70%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border-left: 5px solid var(--secondary);
+    padding-left: 30px;
 }
 
-.projects-grid {
-    width: 70%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    gap: 10px;
+.img-container .firstwork {
+    flex: 1 100%;
+    position: relative;
+    display: inline-block;
+    background-color: var(--secondary);
+    padding: 15px;
+    margin-bottom: 10px;
 }
 
-.project {
-    border: solid;
-    color: black;
+.firstwork img {
+    max-width: 100%;
+    display: block;
+}
+
+
+.firstwork a {
+    flex: 0 0 50%;
+    max-width: 100%;
+    max-height: 100%;
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    text-decoration: none;
+}
+
+.img-container .work {
+    flex: 1 50%;
+    border: 5px solid var(--tertiary);
+    position: relative;
+    display: inline-block;
+    background-color: var(--secondary);
+    padding: 15px;
+    margin-bottom: 10px;
     background-size: cover;
-    background-position: center;
+}
+
+.firstwork.img .text{
+    position: relative;
+    top: 50px;
+}
+
+
+.firstwork.img{
+    background-image: url(/assets/images/runbuddy.PNG);
+    background-size: cover;
+    height: 600px;
+    background-repeat: no-repeat;
+    background-position: top right;
+}
+
+.work.img-1{
+    background-image: url(/assets/images/horiseon.png);
+}
+
+.work.img-2{
+    background-image: url(/assets/images/ddten.png);
+    background-position: top right;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.work.img-3{
+    background-image: url(/assets/images/javascript.png);
+    background-position: top right;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.work.img-4{
+    background-image: url(/assets/images/python.png);
+    background-position: top right;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.work img {
+    max-width: 100%;
+    display: block;
+}
+
+/*adds the ability to click href*/
+.work a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+/*sends objects to the front or back based on number, low being the closest*/  
+    z-index: 1;
+}
+
+
+.img-container .text {
+    margin: 0 30px;
+    display: inline-block;
+    padding: 20px;
+    background-color: var(--tertiary);
+}
+
+.text h3 {
+    color: var(--secondary);
+    font-size: 1.2vw;
+    font-weight: lighter;
+    padding-top: 10px;
+    padding-right: 5px;
+    padding-bottom: 15px;
+    padding-left: 40px;
+}
+
+.text p {
+    color: var(--secondary);
+    font-family: "century gothic",Verdana,sans-serif;
+    font-size: .8vw;
+    font-weight: lighter;
+    padding-top: 0px;
+    padding-right: auto;
+    padding-bottom: 40px;
+    padding-left: 40px;
+} 
+/* work section end */
+/* contact me section */
+
+article h2 {
+    color: var(--secondary);
+    font-size: 50px;
+    font-family: "century gothic",Verdana,sans-serif;
+    font-weight: lighter;
+    text-align: right;
+    padding-top: 30px;
+    flex: 1 30%;
+    padding-right: 30px;
+}
+
+article h2:hover {
     opacity: 0.5;
 }
 
-.project:hover {
-    opacity: 1.0;
+.contactme {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 10px;
+    border-left: 5px solid var(--secondary);
 }
 
-.runbuddy {
-    grid-column: 1/3;
-    grid-row: span 2;
-    background-image: url("../images/runbuddy.PNG");
-}
-
-.horiseon {
-    background-image: url("../images/horiseon.png");
-    background-position: 50% 15%;
-}
-
-.ddten {
-    background-image: url("../images/ddten.png");
-    background-position: 60% 50%;
-}
-
-.javascript {
-    background-image: url("../images/javascript.png");
-}
-
-.python {
-    background-image: url("../images/python.png");
-}
-
-.project-label {
-    /*background-color: var(--secondary);*/
-    background-color: lightgray;;
+.contactme p {
+    margin: 20px 20px;
+    line-height: 1.5;
     color: var(--primary);
-    padding: 10px;
-}
-/* my work section styling end */
-
-/* contact me section styling start */
-footer {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding-top: 30px;
-    margin-bottom: 30px;
+    width: 100%;
+    font-size: 20px;
+    text-align: left;
 }
 
-.content-wrapper {
-    width: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.contact-list {
-    width: 60%;
-    display: flex;
-    justify-content: space-around;
-}
-
-footer ul {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: center;
-    font-size: 30px;
-    font-weight: bolder;
-}
-
-footer ul li {
-    /*padding-bottom: 15px;*/
-    font-weight: bold;
-
-}
-
-footer ul li a {
+.contactme a {
     text-decoration: none;
-    color: var(--primary);
-    padding: 8px;
-    font-weight: bold;
-}
-
-footer ul li a:hover {
-    background: var(--pop);
     color: var(--secondary);
-    border-radius: 15px;
-}
-/* contact me section styling end */
-
-/* MEDIA QUERY FOR TABLET SCREENS AND SMALLER */
-@media screen and (max-width: 768px) {
-    .hero .quote {
-        font-size: 28px;
-        padding-right: 20px;
-    }
-    
-    .hero .quote #quote-text {
-        font-size: 35px;
-    }
-
-    .title h2 {
-        font-size: 35px;
-    }
-
-    .about-me p {
-        font-size: 16px;
-        line-height: 1.6;
-    }
+    transition: color 0.0s ease-in-out 0s;
 }
 
-/* MEDIA QUERY FOR MOBILE PHONE SCREENS AND SMALLER */
-@media screen and (max-width: 575px) {
+.contactme a:hover {
+    color: var(--tertiary);
+}
+/*contact me end*/
+
+/* footer */
+
+footer {
+    width: 100%;
+    padding: 40px 35px;
+}
+
+footer p {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: lighter;
+    font-size: 14px;
+    text-align: center;
+    color: var(--secondary);
+    margin: 0;
+}
+
+/* media query */
+
+@media screen and (max-width: 980px) {
     header {
+        padding-bottom: 0;
         justify-content: center;
-        padding: 20px;
+        position: relative;
+    }
+
+    header h1 {
+        width: 100%;
+        text-align: center;
     }
 
     header nav ul {
-        min-height: 80px;
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+        padding-bottom: 20px;
+    }
+
+    header nav ul li a {
+        font-size: 16px;
+    }
+
+    footer p {
+        text-align: center;
+        width: 100%;
     }
 
     .hero {
-        flex-direction: column;
+        margin-bottom: 0px;
     }
 
-    .about-me {
-        flex-direction: column;
+    .container {
+        margin: 20px auto;
+        padding-left: 100px;
+        padding-right: 100px;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex: 0 100%;
+        align-items: flex-start;
+        justify-content: center;
     }
 
-    .title {
-        border-bottom: 5px solid var(--pop);
-        border-right: none;
+    .about-me h2,
+    .showcase h2,
+    .contact-me h2 {
+        display: flex;
+        justify-content: center;
         text-align: center;
-        min-width: 100%;
-        max-width: 100%;
+        width: 60%;
+        border-bottom: 1px solid var(--primary);
+        margin-bottom: 20px;
+        padding-right: 0;
+        padding-bottom: 20px;
+    }
+
+    .aboutme {
+        flex: 1 100%;
+        align-items: center;
+        justify-content: center;
+        border: none;
         padding: 0;
     }
 
-    .about-me p {
-        font-size: 16px;
-        line-height: 1.6;
+    .about-img {
+        display: flex;
+        justify-content: center;
+        padding: 0 20px 10px 0;
+    }
+
+    .img-container {
+        flex: 1 100%;
         width: 100%;
+        height: 100%;
+        min-width: 400px;
+        border: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .img-container .firstwork,
+    .img-container .work {
+        flex: 0 100%;
+        width: 70%;
+        min-width: 400px;
+        border: none;
+        margin: 0;
         padding: 15px;
     }
 
-    .my-work {
-        flex-direction: column;
-        padding: 30px 0;
+    .contactme {
+        border: none;
     }
 
-    .projects-grid-wrapper {
-        width: 100%;
-        padding: 10px;
+    .text h3 {
+        font-size: 16px;
+        padding-top: 20px;
+        padding-right: 20px;
+        padding-bottom: 15px;
+        padding-left: 20px;
     }
     
-    .projects-grid {
-        width: 80%;
+    .text p {
+        font-size: 16px;
+        padding-top: 0px;
+        padding-right: 20px;
+        padding-bottom: 20px;
+        padding-left: 20px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .hero {
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .about-me h2,
+    .showcase h2,
+    .contact-me h2 {
+        font-size: 26px;
+        width: 100%
     }
 
-    footer {
-        flex-direction: column;
-    }
-
-    footer ul {
-        flex-direction: column;
-    }
-
-    .content-wrapper {
+    .aboutme p {
+        font-size: 14px;
         width: 100%;
     }
 
-    footer ul li {
-        padding: 10px;
-        text-align: center;
+    .contactme {
+        padding: 0;
     }
-    
+
+    .contactme p {
+        font-size: 14px;
+        width: 70%;
+    }
+
+    .contactme img {
+        width: 25px;
+        height: 25px;
+        float: left;
+        margin: 0px 20px 7px 0;
+    }
 }
