--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,6 @@ h2 {
 section h2 {
     color: var(--secondary);
     font-size: 50px;
-    font-family: "century gothic",Verdana,sans-serif;
     font-weight: lighter;
     text-align: right;
     padding-top: 30px;
@@ -154,23 +153,22 @@ section h2:hover {
 .about-img img:hover {
     opacity: 0.5;
 }
+/*about me end
 
 /* work section */
-
 main h2 {
     color: var(--secondary);
     font-size: 50px;
-    font-family: "century gothic",Verdana,sans-serif;
     font-weight: lighter;
     text-align: right;
     padding-top: 30px;
-    flex: 1 30%;
+    flex: 1 20%;;
     padding-right: 30px;
 }
 
 .img-container {
     display: flex;
-    flex: 1 70%;
+    flex: 2 70%;
     flex-wrap: wrap;
     justify-content: space-between;
     border-left: 5px solid var(--secondary);
