latest project added to portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,7 +236,7 @@ main h2 {
 }
 
 .work.img-3 {
-  background-image: url("../images/javascript.png");
+  background-image: url("../images/theGameRoom.png");
   background-position: top right;
   background-size: contain;
   background-repeat: no-repeat;
